k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels: { environment: dev, project: juice-shop }
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels: { environment: prod, project: juice-shop }
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: security-tools
