k8s/base/network-policy-allow-alb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alb-to-juiceshop
spec:
  podSelector:
    matchLabels:
      app: juice-shop
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 3000
          protocol: TCP
